webook/k8s-webook-deloyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webook
  # template 描述的是你的 POD 是什么样的
  template:
    metadata:
      labels:
        app: webook
    # POD 的具体信息
    spec:
      #hostNetwork: true
      containers:
        - name: webook
          image: neo007/webook:v0.0.2
          ports:
            - containerPort: 8081
