webook/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      port: 3308
#     targetPort 与 deployment.yaml 中的containerPort 保持一致
      targetPort: 3306
#     nodePort: 数值在 30000--32767之间
      nodePort: 30001
  type: NodePort
