webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      port: 6380
#     redis 默认端口 6379
#     targetPort 与 deployment.yaml 中的containerPort 保持一致
      targetPort: 6379
      nodePort: 30010
  type: NodePort
