webook/k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
spec:
  selector:
    app: webook
  ports:
    - protocol: TCP
      name: http
      port: 81
#     targetPort: 与 deployment 中的containerPort 保持一致
      targetPort: 8081
  type: LoadBalancer
