webook/k8s-webook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-webook-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
#    - host 是 webook.com 的时候，命中本条：
#  - host: webook.com
  - host: localhost
    http:
      paths:
#        - 请求路径的前缀是 / 的时候，
#        将流量转发过去后面的 webook 服务上
#        端口是 81
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webook
            port:
              number: 81
